# apex-live-overlay

./: LICENSE  README.md  data.py  emulate-once.py  emulate.py  emulate_observer_switched.py  emulate_once.py  emulate_player_killed.py  events_pb2.py  index.html  intermediary_message_builder.py  main.py  pack.py  pyproject.toml  requirements-dev.txt  requirements.txt  script.js  setup.cfg  styles.css  team_data.py
LiveAPI/: config.json
templates/: index.html
